--- a/CV/index.html
+++ b/CV/index.html
@@ -222,10 +222,10 @@
               <p>Technical high school.</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Software Engineering &amp; Graphic Design</h4>
+              <h4>Bachelor of Software Engineering</h4>
               <h5>Oct 2018 – Jun 2021</h5>
               <p><em>University American College Skopje, Macedonia</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p>Currently third and last year. 3.3 GPA so far.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
