--- a/CV/index.html
+++ b/CV/index.html
@@ -87,6 +87,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.matejcho.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Github:</strong> www.github.com/matejcho</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Skopje, Macedonia</li>
                 </ul>
               </div>
